--- a/angular.json
+++ b/angular.json
@@ -50,6 +50,11 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/primeflex/primeflex.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -145,6 +150,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "car-sales"
 }
